actually fixed alignment on experience container

--- a/style.css
+++ b/style.css
@@ -334,7 +334,7 @@ section {
 }
 
 .article-container p {
-    width: 100px;
+    width: 115px;
 }
 
 article {
